entity enum added, update...
